--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "description": "Add a RESTful API to your SilverStripe application",
     "type": "silverstripe-vendormodule",
     "require": {
-        "silverstripe/framework": "^4.x-dev"
+        "silverstripe/framework": "^4.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5@dev",
         "squizlabs/php_codesniffer": "^3.0@dev",
-        "silverstripe/versioned": "^1.0"
+        "silverstripe/versioned": "^1.0.1"
     },
     "license": "MIT",
     "authors": [
